// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`intercept should be COMPLETED 1`] = `
{
  "key": "foo",
  "value": "bar",
}
`;

exports[`intercept should be COMPLETED 2`] = `
[
  {
    "elementId": "StartEvent_1",
    "endEvent": false,
    "eventTime": 2023-11-16T18:44:49.350Z,
    "payload": "{"foo":"bar"}",
    "referenceId": null,
    "startEvent": true,
    "status": "STARTED",
    "transactionId": "00f63f14-8885-4540-88a3-01e778091a44",
  },
  {
    "elementId": "StartEvent_1",
    "endEvent": false,
    "eventTime": 2023-11-16T18:44:49.350Z,
    "payload": "{"key":"foo","value":"bar"}",
    "referenceId": null,
    "startEvent": true,
    "status": "COMPLETED",
    "transactionId": "00f63f14-8885-4540-88a3-01e778091a44",
  },
]
`;

exports[`intercept should be COMPLETED with referenceId 1`] = `"event-id"`;

exports[`intercept should be ERROR 1`] = `null`;

exports[`intercept should be ERROR 2`] = `
[
  {
    "elementId": "StartEvent_1",
    "endEvent": false,
    "eventTime": 2023-11-16T18:44:49.352Z,
    "payload": "{"foo":"foo"}",
    "referenceId": null,
    "startEvent": false,
    "status": "STARTED",
    "transactionId": undefined,
  },
  {
    "elementId": "StartEvent_1",
    "endEvent": false,
    "errorMessage": [Error: Unable to execute!],
    "eventTime": 2023-11-16T18:44:49.352Z,
    "payload": "{"foo":"foo"}",
    "referenceId": null,
    "startEvent": false,
    "status": "ERROR",
    "transactionId": undefined,
  },
]
`;

exports[`intercept should be RESTARTED 1`] = `null`;

exports[`intercept should be RESTARTED 2`] = `
[
  {
    "elementId": "StartEvent_1",
    "endEvent": false,
    "eventTime": 2023-11-16T18:44:49.354Z,
    "payload": "{"foo":"foo"}",
    "referenceId": null,
    "startEvent": false,
    "status": "STARTED",
    "transactionId": undefined,
  },
  {
    "elementId": "StartEvent_1",
    "endEvent": false,
    "errorMessage": [Error: Unable to convert!],
    "eventTime": 2023-11-16T18:44:49.354Z,
    "payload": "{"foo":"foo"}",
    "referenceId": null,
    "startEvent": false,
    "status": "RESTARTED",
    "transactionId": undefined,
  },
  {
    "elementId": "StartEvent_1",
    "endEvent": false,
    "errorMessage": [Error: Unable to convert!],
    "eventTime": 2023-11-16T18:44:49.354Z,
    "payload": "{"foo":"foo"}",
    "referenceId": null,
    "startEvent": false,
    "status": "RESTARTED",
    "transactionId": undefined,
  },
  {
    "elementId": "StartEvent_1",
    "endEvent": false,
    "errorMessage": [Error: Unable to convert!],
    "eventTime": 2023-11-16T18:44:49.354Z,
    "payload": "{"foo":"foo"}",
    "referenceId": null,
    "startEvent": false,
    "status": "ERROR",
    "transactionId": undefined,
  },
]
`;

exports[`intercept should be WARNING 1`] = `null`;

exports[`intercept should be WARNING 2`] = `
[
  {
    "elementId": "StartEvent_1",
    "endEvent": false,
    "eventTime": 2023-11-16T18:44:49.353Z,
    "payload": "{"foo":"foo"}",
    "referenceId": null,
    "startEvent": false,
    "status": "STARTED",
    "transactionId": undefined,
  },
  {
    "elementId": "StartEvent_1",
    "endEvent": false,
    "errorMessage": [Error: Unable to convert!],
    "eventTime": 2023-11-16T18:44:49.353Z,
    "payload": "{"foo":"foo"}",
    "referenceId": null,
    "startEvent": false,
    "status": "WARNING",
    "transactionId": undefined,
  },
]
`;
